Fixed scroll offse for anchors being hidden by navbar

--- a/style.css
+++ b/style.css
@@ -114,6 +114,13 @@ body {
     margin-top:  5px;
 }
 
+/* Offset more anchors for navbar*/
+span[id^="more"], {
+    padding-top:  100px;
+    margin-top:  -100px;
+    display:  inline-block;
+}
+
 /* Styling inside articles */
 article .alignleft{
     float:  left;
